# mcpack-translator

./:  .env.example  .gitattributes  .gitignore  1_Modpack_Translator.py  Dockerfile  README.md  app.py  docker-compose.yml  gradio_app.py  gui.py  gui_for_server.py  home.py  how_to_apply_patch.md  ko_kr.snbt  pyproject.toml  requirements.txt  streamlit_utils.py  test.ipynb
gradio_modules/: dictionary_builder.py  logger.py  packager.py  translator.py  utils.py
gradio_pages/: file_translator.py  home.py  model_settings.py  modpack_translator.py  update_modpack.py
minecraft_modpack_auto_translator/: __init__.py  config.py  delay_manager.py  finger_print.py  graph.py  mc_lang_parser.py  resourcepack.py  translator.py
minecraft_modpack_auto_translator/assets/versions/1.21.5/: _list.json
minecraft_modpack_auto_translator/loaders/: __init__.py  aspects_loader_.py  base_loader.py  context.py  default_loader.py  dict_loader.py  ftbquests_chapter_loader.py  ftbquests_reward_table_loader.py  global_packs_origin_loader.py  list_loader.py  origins_loader.py  patchouli_books_loader.py  paxi_loader.py  puffish_skills_loader.py  registry.py  string_loader.py  tconstruct_loader.py  whitelist_loader.py
minecraft_modpack_auto_translator/parsers/: __init__.py  base_parser.py  json_parser.py  lang_parser.py  markdown_parser.py  snbt_parser.py  txt_parser.py  xml_parser.py
pages/: 1_Modpack_Translator.py  2_File_Translator.py  3_Txt_Translator.py
translate_ui/: 1_Modpack_Translator.py  2_File_Translator.py  3_Txt_Translator.py
ㅇㅇ/: 2_File_Translator.py  3_Txt_Translator.py
