[project]
name = "mc-modpack-auto-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.15",
    "anthropic>=0.49.0",
    "apscheduler>=3.11.0",
    "bs4>=0.0.2",
    "catboxpy>=0.1.0",
    "discord-webhook[async]>=1.4.1",
    "fastapi>=0.115.12",
    "ftb-snbt-lib>=0.4.0",
    "g4f>=0.5.1.1",
    "gradio>=5.25.2",
    "jsonschema>=4.23.0",
    "langchain>=0.3.22",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-google-genai>=2.1.2",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "numba>=0.61.2",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
